Articles and FAQs section title fix on mobile

--- a/src/scss/_articles-faqs.scss
+++ b/src/scss/_articles-faqs.scss
@@ -1,7 +1,7 @@
 // Articles and FAQs section
 
 .ArticlesFaqs {
-  padding: 0 0 40px;
+  padding: 40px 0;
   background: #ffffff;
 
   .title {
